# voty

./: README.md  docker-compose.yml  load-test  post.json
api/: Cargo.toml  Dockerfile  start
api/src/: main.rs
database/: init.sql
queue-client/: Cargo.toml
queue-client/src/: lib.rs
queue-server/: Cargo.toml
queue-server/src/: main.rs
votes-processor/: Cargo.toml  start
votes-processor/src/: main.rs
