[package]
name = "voty"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
sqlx = { version = "0.7.4", features = [ "runtime-tokio", "postgres" ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.125"
queue-client = { git = "https://github.com/CrabMQ/rust-client.git" }
env_logger = "0.11.5"
envy = "0.4"
log = "0.4.22"
