[package]
name = "votes-processor"
version = "0.1.0"
edition = "2021"

[dependencies]
queue-client = { git = "https://github.com/CrabMQ/rust-client.git" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.125"
tokio = { version = "1.39.2", features = ["full"] }
# TODO: Change to 0.8.1 when the postgres issue is fixed
sqlx = { version = "0.7.4", features = [ "runtime-tokio", "postgres", "uuid" ] }
env_logger = "0.11.5"
envy = "0.4"
log = "0.4.22"

[dependencies.uuid]
version = "1.10.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
